AM_CFLAGS = \
	$(ELEMENTARY_CFLAGS)

AM_LDFLAGS = \
	$(ELEMENTARY_LIBS)

bin_PROGRAMS = \
     	glviewcube11 \
	gears \
	pbuffer \
	torus	

glviewcube11_LDADD = $(AM_LDFLAGS)
glviewcube11_SOURCES = glviewcube11.c image_data_1.c image_data_2.c

gears_LDADD = $(AM_LDFLAGS)
gears_SOURCES = gears.c

pbuffer_LDADD = $(AM_LDFLAGS)
pbuffer_SOURCES = pbuffer.c

torus_LDADD = $(AM_LDFLAGS)
torus_SOURCES = torus.c

